--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Ramo de flores para mi novia</title>
+        <title>Ti amuuu</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
       
         <!-- Fuente más elegante y legible -->
